Frontend/Frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-pod
  ports:
  - port: 80
    targetPort: 80
